authentication process implemented